--- a/OEBPS/Text/c008.xhtml
+++ b/OEBPS/Text/c008.xhtml
@@ -125,12 +125,12 @@
     <p>梅赛德思量了一下，想不出其他好名字，就决定了命名。</p>
     <p>拥有许多庞大的武器，意外地觉得很适合这个简单的命名。</p>
     <p></p>
-    <p>“<span class="character">那么你的名字从现在开始就是本凯。”</span></p>
-    <p>“<span class="character">本凯……好名字。这个名字，我确实记住了”</span></p>
-    <p>“<span class="character">好，本凯。把倒在那里的seeker搬过来”</span></p>
+    <p>“<span class="character">那么你的名字从现在开始就是牟庆。”</span></p>
+    <p>“<span class="character">牟庆……好名字。这个名字，我确实记住了”</span></p>
+    <p>“<span class="character">好，牟庆。把倒在那里的seeker搬过来”</span></p>
     <p></p>
     <p>他们已经死了，但至少想让他们回到地上。</p>
-    <p>这样想的梅赛德斯决定让奥加——本凯运送尸体。</p>
+    <p>这样想的梅赛德斯决定让奥加——牟庆运送尸体。</p>
     <p>seeker他们大概也不想被杀死自己的本人运送吧，但比起在这种地方遗体腐朽，应该要好些。</p>
     <p>“<span class="character">站得起来吗？嗯……”</span></p>
     <p>“<span class="character">我是トライヌ。”</span></p>
@@ -172,7 +172,7 @@
     <p>梅赛德斯说了那件事，把肩膀借给了トライヌ开始离开迷宫。</p>
     <p class="divline"></p>
     <p>行李和巧克力批量生产的工作人员GET☆</p>
-    <p>本凯非常大，有6条手臂，因此可以承载的行李是梅赛德斯的10倍。</p>
+    <p>牟庆非常大，有6条手臂，因此可以承载的行李是梅赛德斯的10倍。</p>
 </body>
 
 </html>
