--- a/OEBPS/Text/c010.xhtml
+++ b/OEBPS/Text/c010.xhtml
@@ -16,21 +16,21 @@
     <p class="divline"></p>
     <p>在梅赛德斯他们面前出现了手持剑的骸骨。</p>
     <p>和以前梅赛德斯抢夺武器一样，是格利佩·菲特。</p>
-    <p>但是在阻挡他的同时，本凯一剑就把他打成两半，甚至没有进行战斗。</p>
-    <p>是本凯强，还是魔物弱……不管怎么说，我知道了本凯如果是浅层的话是十分有用的。</p>
-    <p>魔物登场的同时被本凯砍掉已经是第五次了。现在梅赛德斯没有进行战斗，顺利地进入了迷宫。</p>
+    <p>但是在阻挡他的同时，牟庆一剑就把他打成两半，甚至没有进行战斗。</p>
+    <p>是牟庆强，还是魔物弱……不管怎么说，我知道了牟庆如果是浅层的话是十分有用的。</p>
+    <p>魔物登场的同时被牟庆砍掉已经是第五次了。现在梅赛德斯没有进行战斗，顺利地进入了迷宫。</p>
     <p>格利佩·菲特回收掉落的剑，然后看盾。</p>
-    <p>“<span class="character">喂，本凯。反正你也拿一把盾吧。</span></p>
+    <p>“<span class="character">喂，牟庆。反正你也拿一把盾吧。</span></p>
     <p><span class="character">好不容易有六只手臂，却全部装备剑，太可惜了。装备更多不同的武器，做各种各样的事情吧”</span></p>
     <p>“<span class="character">唔……原来如此”</span></p>
     <p></p>
-    <p>本凯有六只胳膊，在战斗中非常有利。</p>
+    <p>牟庆有六只胳膊，在战斗中非常有利。</p>
     <p>虽然这么说，但是如果全部都拿着剑的话，也是徒劳有限度的。</p>
     <p>梅赛德斯想，应该多拿枪、盾、弓，使战术有幅度吧。</p>
-    <p>本凯是不是也特别拘泥于剑，扔掉一把剑用盾代替。</p>
-    <p>因为他扔掉的剑比格利佩·菲特的剑质量好，梅赛德斯从到现在使用的格利佩·菲特的剑变更为本凯的剑装备。盖利佩特的剑已经可以卖了吧。</p>
+    <p>牟庆是不是也特别拘泥于剑，扔掉一把剑用盾代替。</p>
+    <p>因为他扔掉的剑比格利佩·菲特的剑质量好，梅赛德斯从到现在使用的格利佩·菲特的剑变更为牟庆的剑装备。盖利佩特的剑已经可以卖了吧。</p>
     <p>强有力的武器到手后把之前的武器卖掉。这也是幻想风的基本。</p>
-    <p>此后二人也没有特别苦战的事，轻松地到十层跑破。出来的魔物几乎没有成为本凯的对手而散落，即使忍耐一发也因为梅赛德斯的追击而轻易倒下。</p>
+    <p>此后二人也没有特别苦战的事，轻松地到十层跑破。出来的魔物几乎没有成为牟庆的对手而散落，即使忍耐一发也因为梅赛德斯的追击而轻易倒下。</p>
     <p>然后是十一层。在这里终于遇到了另一个目的灰色的果冻。</p>
     <p>看上去确实是把灰色的果冻做成人形的奇怪的东西。胸中有球体，即使不喜欢也会引人注目。</p>
     <p></p>
@@ -52,8 +52,8 @@
     <p>“<span class="character">要去捕捉シュヴァルツ・ヴォルファング吗”</span></p>
     <p>“<span class="character">啊。今天做完这个就撤退”</span></p>
     <p></p>
-    <p>超过十层后魔物的强度也进一步上升，一些能忍受着本凯的初击的人也开始出现。</p>
-    <p>虽然那么说，还不是苦战的水平。光是本凯就可以轻松取胜吧。</p>
+    <p>超过十层后魔物的强度也进一步上升，一些能忍受着牟庆的初击的人也开始出现。</p>
+    <p>虽然那么说，还不是苦战的水平。光是牟庆就可以轻松取胜吧。</p>
     <p>几乎不费力地到达十二阶层，寻找目的之狼。</p>
     <p>稍微徘徊的话，与狼男遭遇了虽然是遗憾但是稍微不同。</p>
     <p></p>
@@ -64,14 +64,14 @@
     <p>眼前凶猛的狼男身高190cm左右。</p>
     <p>正如字面意思一样，大人和孩子的差别，但事到如今，梅赛德斯并不畏惧。</p>
     <p>以从容的表情按手指的关节，迈出一步。</p>
-    <p>但是与此同时，感觉到有什么东西从迷宫深处突击而来的迹象，梅赛德斯和本凯马上回避了。</p>
+    <p>但是与此同时，感觉到有什么东西从迷宫深处突击而来的迹象，梅赛德斯和牟庆马上回避了。</p>
     <p>只有没有反应的ヴァラヴォルフ・ロート受到了什么突击，溅起血飞沫上半身消失。</p>
     <p>二人回头看，在那里的是狼人的上半身被切断的黑色巨狼的身姿。</p>
     <p></p>
     <p><span class="character">“这家伙吗？”</span></p>
     <p><span class="character">“是的，没错。”</span></p>
     <p></p>
-    <p>听到本凯的回信，梅赛德斯露出了笑容。</p>
+    <p>听到牟庆的回信，梅赛德斯露出了笑容。</p>
     <p>从目的地来，省去寻找的工夫。</p>
     <p>ヴァラヴォルフ・ロート虽然有点遗憾，但是那份就由这家伙来弥补吧。</p>
     <p></p>
@@ -85,7 +85,7 @@
     <p><span class="character">“……真快啊”</span></p>
     <p></p>
     <p>立刻再生裂开的皮肤，转向狼。</p>
-    <p>本凯打算向前迈出脚步，但制止了。</p>
+    <p>牟庆打算向前迈出脚步，但制止了。</p>
     <p>今后必须教育上下关系，被自己以外的人打倒的话，就算是狼也不会认同我们的吧。</p>
     <p>黑狼再次向着迈出的梅赛德斯跃进，再次被削减了皮肤。</p>
     <p>虽然再生后回头，但黑色的疾风并没有停止，从四面八方袭向了梅赛德斯</p>
@@ -125,8 +125,8 @@
     <p>名字好像是忘记带着百万吨硬币从桥上掉下来的样子。</p>
     <p>所以梅赛德斯并没有特别想好名字于是命名为克洛了。</p>
     <p>シュバルツ和克洛的意思是一样的。虽然也不是不觉得发音一下子变得可爱了，但是不能和用圆珠笔也能成为クーゲルシュライバー这种决战兵器名字的国家的语言相比。</p>
-    <p>说点题外话，本凯和克洛却意外地被母亲和奶奶所接受。</p>
-    <p>为了不让母亲害怕，让他们在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着本凯和克洛来，就这样普通地吃饭了。</p>
+    <p>说点题外话，牟庆和克洛却意外地被母亲和奶奶所接受。</p>
+    <p>为了不让母亲害怕，让他们在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着牟庆和克洛来，就这样普通地吃饭了。</p>
     <p>到底是梅赛德斯的母亲吗。胆量不一般。</p>
     <p></p>
     <p>トライヌ商会马上开始巧克力和罐头的销售，进行着大规模的宣传。</p>
@@ -167,11 +167,11 @@
     <p>下定决心的第二天……有着相同境遇的兄弟们接触</p>
     <p>梅赛德斯也没想到会发生那么坏的事情。</p>
     <p class="divline"></p>
-    <p>Q、是怎么带着本凯和克洛去迷宫和街道的？</p>
-    <p>1、首先拿起本凯。</p>
+    <p>Q、是怎么带着牟庆和克洛去迷宫和街道的？</p>
+    <p>1、首先拿起牟庆。</p>
     <p>2、施加重力阻断魔法投掷。</p>
     <p>3、梅赛德斯乘克洛。</p>
-    <p>4、克洛跳跃本凯乘上</p>
+    <p>4、克洛跳跃牟庆乘上</p>
     <p>5、咻~~</p>
 </body>
 
