--- a/OEBPS/Text/c011.xhtml
+++ b/OEBPS/Text/c011.xhtml
@@ -144,7 +144,7 @@
     <p>“<span class="character">要这样做</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p>背对着发呆的波利斯，没事一样地走着。</p>
-    <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的本凯和克洛骄傲地走着。</p>
+    <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的牟庆和克洛骄傲地走着。</p>
     <p>度过了无用的时间。虽然这么想着，但梅赛德斯却和看上去害怕自己的年幼少女目光相对。</p>
     <p>“<span class="character">来</span>”</p>
     <p>“<span class="character">诶？</span>”</p>
