--- a/OEBPS/Text/c012.xhtml
+++ b/OEBPS/Text/c012.xhtml
@@ -130,7 +130,7 @@
     <p>受付“这是什么”</p>
     <p>梅赛德斯“……一只猫……吧”</p>
     <p>受付“只能看到新物种的怪物哦”</p>
-    <p>本凯“那个……很有独创性啊……”</p>
+    <p>牟庆“那个……很有独创性啊……”</p>
     <p>路过的猫“ニャーン”</p>
     <p>译：哇，这么丑啊。舐めとんのか。</p>
     <p>梅赛德斯“…………”</p>
