--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -89,9 +89,9 @@
     <p>虽说如此，但也并不是只买贵的东西就行。譬如无意义安上了宝石的装饰用的剑等论外中的论外。纯粹浪费钱。</p>
     <p>看起来很朴素也没关系。不管怎样追求性能和机能美的装备拘泥。</p>
     <p></p>
-    <p>“<span class="character">上街了，本凯，克洛。你们的装备也更新一下吧</span>”</p>
+    <p>“<span class="character">上街了，牟庆，克洛。你们的装备也更新一下吧</span>”</p>
     <p></p>
-    <p>带着本凯和克洛在城市里巡回，巡视着各种各样的武器。</p>
+    <p>带着牟庆和克洛在城市里巡回，巡视着各种各样的武器。</p>
     <p>首先把到目前为止使用的武器没有一个例外地全部卖掉。已经不需要这些了。</p>
     <p>然后梅赛德斯买了自己用的哈尔巴德。</p>
     <p><span class="comment translator">ハルバード wiki:斧枪是一种双手持握的长柄武器，在十四及十五世纪时最为风行。这个字有可能是来自德文字Halm与Barte，现在德语称此为Hellebarde。斧枪以大钉将斧刃固定在柄头，通常有钩或刺在斧刃的背面，这可以用来钩住骑兵， 斧枪通常长1.5至1.8米。 斧枪与中国的戟并不相同，斧枪是斧与枪的结合，而戟则是戈与矛/枪的结合。</span></p>
@@ -120,8 +120,8 @@
     <p>选择了与至今为止的黑大衣相似的设计并且对刃性能出色的东西。</p>
     <p>大衣下面的背心没有变化。因为自己行动也方便也没有特别不满，只是作为预备购买了几件新的东西。</p>
     <p>或者说，好防具都是非常漂亮的铠甲，以作为梅赛德斯武器的轻装是难点。而且尺寸也不合适。</p>
-    <p>整理好自己的装备，接下来是本凯。</p>
-    <p>给本凯买了一件自己穿不了的黑色铠甲。</p>
+    <p>整理好自己的装备，接下来是牟庆。</p>
+    <p>给牟庆买了一件自己穿不了的黑色铠甲。</p>
     <p>再加上他有六个手臂，所以购买了保护另外手臂的护手等装备。</p>
     <p><span class="comment translator">ガントレット gauntlet[护手]</span></p>
     <p>并且头盔是全脸型的。每次走在街上，都会被目不转睛地盯着拐角，所以也有隐藏它的意思……也感到过分看起来突出的心情。</p>
@@ -147,8 +147,8 @@
     <p><span class="character">于是，是不是应该重新加入只负责托运行李的成员呢？”</span></p>
     <p>“<span class="character">嗯。的确”</span></p>
     <p></p>
-    <p>原来梅赛德斯一个人拿不完行李，不能和武器并存，所以作为行李员把本凯拉了进去。</p>
-    <p>可是本凯总觉得是战斗力。可以正常使用。</p>
+    <p>原来梅赛德斯一个人拿不完行李，不能和武器并存，所以作为行李员把牟庆拉了进去。</p>
+    <p>可是牟庆总觉得是战斗力。可以正常使用。</p>
     <p>克洛的速度很快，是能载着梅赛德斯战斗的战力。拿行李不是明智的事情。</p>
     <p></p>
     <p><span class="character">确实想要不参加战斗而专心拿着行李的成员。</span></p>
@@ -159,7 +159,7 @@
     <p>如果有钱的话，就不会特意花费那样的工夫了。</p>
     <p>如果想要战斗力的话，可以自己潜入深层去捕获，但如果只是随身携带行李的程度的话，宠物店的魔物就足够了。</p>
     <p>一行人这样判断，然后就去了宠物店。</p>
-    <p>另外，当然化身为步行铠甲的本凯非常引人注目。</p>
+    <p>另外，当然化身为步行铠甲的牟庆非常引人注目。</p>
     <p class="divline"></p>
     <p>トライヌ“不……不……敲诈什么的……哪里的话……嘿！</p>
     <p>价格很合理……良心大大的……！</p>
