--- a/OEBPS/Text/c015.xhtml
+++ b/OEBPS/Text/c015.xhtml
@@ -49,7 +49,7 @@
     <p></p>
     <p>作为随身行李的小型三角龙……立即购买了克拉伊利亚。这样行李就保管好了。</p>
     <p>梅赛德斯没有马上潜入迷宫，当天就回去了，花了数天时间对克拉伊利亚进行教育。</p>
-    <p>在训练的同时，通过多次熟悉使用哈尔巴德的训练，与本凯和克洛交织的模拟战来提高战斗力。</p>
+    <p>在训练的同时，通过多次熟悉使用哈尔巴德的训练，与牟庆和克洛交织的模拟战来提高战斗力。</p>
     <p>就这样，做好了充分的准备，梅赛德斯终于朝着迷宫最下层的目标突入了斯塔克迷宫。</p>
     <p class="divline"></p>
     <p>这次的目的既不是地图，也不是捕获魔物，也不是收集素材。</p>
@@ -68,9 +68,9 @@
     <p>向下、向下、一味向下。</p>
     <p>虽然不知道是什么样的结构，但越往里走，阶层的宽度就会发生变化，变得像迷宫一样。</p>
     <p>原来如此，难怪トライヌ会把食物吃光。一直以最短路线前进的梅赛德斯，也不能一日攻略。</p>
-    <p>本凯知道路，所以即使没有地图的地方也能很容易地发现通往下一个阶层的楼梯，真是值得庆幸的事。</p>
+    <p>牟庆知道路，所以即使没有地图的地方也能很容易地发现通往下一个阶层的楼梯，真是值得庆幸的事。</p>
     <p>但即便如此，随着越往深处前进难易度越高，迷宫也越复杂。</p>
-    <p>梅赛德斯通过事先预先预习、地图绘制、本凯等伙伴，进展顺利，否则攻略将极为困难。</p>
+    <p>梅赛德斯通过事先预先预习、地图绘制、牟庆等伙伴，进展顺利，否则攻略将极为困难。</p>
     <p>初次见面就突然能攻略这个的家伙可以断言是怪物。</p>
     <p>但是，梅赛德斯的步伐也是从seeker的常识来看，是十分出类拔萃的速度。</p>
     <p>潜入迷宫五日。仅仅如此而已，一行人就已经到达了最底层。</p>
@@ -84,28 +84,28 @@
     <p>梅赛德斯把罐头打开，用叉子吃里面的魔物肉。</p>
     <p>然后吃了一块板状巧克力，决定那天睡觉。</p>
     <p>看守是交替制，一个人睡四个小时。</p>
-    <p>第二天——梅赛德斯他们在作为目的的门前，与被命名为本凯之前的阿修拉奥加对峙着。</p>
+    <p>第二天——梅赛德斯他们在作为目的的门前，与被命名为牟庆之前的阿修拉奥加对峙着。</p>
     <p></p>
     <p>“<span class="character">你来了，求宝者。但是在这之前只要有我在就不可能前进</span>”</p>
-    <p>“<span class="character">原来如此，真的有个你啊，本凯</span>”</p>
+    <p>“<span class="character">原来如此，真的有个你啊，牟庆</span>”</p>
     <p>“<span class="character">主</span>”</p>
     <p>“<span class="character">我知道。交给你了</span>”</p>
     <p></p>
-    <p>本凯走到阿修拉奥加前面。</p>
+    <p>牟庆走到阿修拉奥加前面。</p>
     <p>虽然是相同的存在，但是二者却有着一目了然的差异。</p>
     <p>阿修拉奥加是梅赛德斯遇见时那样的外表，武器也只有六把剑。</p>
-    <p>相对的，本凯用铠甲包裹全身，武器除了剑以外也装备着各种各样的东西。</p>
-    <p>遇上梅赛德斯而改变了的本凯与之前的本凯。过去和现在。</p>
-    <p>这种差距显而易见，战斗始终被本凯压倒。</p>
+    <p>相对的，牟庆用铠甲包裹全身，武器除了剑以外也装备着各种各样的东西。</p>
+    <p>遇上梅赛德斯而改变了的牟庆与之前的牟庆。过去和现在。</p>
+    <p>这种差距显而易见，战斗始终被牟庆压倒。</p>
     <p>二人展开互相挥舞武器的剑戟，武器的性能也不同。</p>
     <p>阿修拉奥加不断地被击落武器，如果拉开距离则受到枪和十字弓的远距离攻击。</p>
-    <p>不久，本凯一次也没有表现出有危险的场面，将过去的自己的头砍飞了。</p>
+    <p>不久，牟庆一次也没有表现出有危险的场面，将过去的自己的头砍飞了。</p>
     <p></p>
     <p>“<span class="character">很漂亮。我看到了你的成长</span>”</p>
     <p>“<span class="character">这也是因为和主人相遇的缘故。</span>”</p>
     <p></p>
     <p>武器有差别。但是比这更大的差距就是能力的差距。</p>
-    <p>没错，单纯的因为本凯比阿修拉奥加要强。</p>
+    <p>没错，单纯的因为牟庆比阿修拉奥加要强。</p>
     <p>梅赛德斯确信。可以。我们很强。</p>
     <p>谦虚是美德，骄傲是恶德。</p>
     <p>但是没有自信的人为什么能取得胜利呢？</p>
@@ -122,7 +122,7 @@
     <p>“<span class="character">汪！”</span></p>
     <p></p>
     <p>一把手搭在门上，门就轻易地打开了。</p>
-    <p>里面有一条用黄金涂饰的绚烂的一条道路。正如本凯所说的那样，前面还有一扇门，梅赛德斯毫不畏惧地打开了。</p>
+    <p>里面有一条用黄金涂饰的绚烂的一条道路。正如牟庆所说的那样，前面还有一扇门，梅赛德斯毫不畏惧地打开了。</p>
     <p>然后在那前面的——大厅，还有那里的两扇门。</p>
     <p>右边的门是黄金。左边的门是漆黑。</p>
     <p>那简直就像是表示着前方的分歧点，梅赛德斯也不知不觉地紧张地鸣响着喉咙。</p>
@@ -163,7 +163,7 @@
     <p>相反，被完全攻略，复活的事也没有了的三成……选择了黑色的门，战胜了困难？</p>
     <p>这样想的话，有一定程度的说明。</p>
     <p></p>
-    <p>“<span class="character">……本凯，克洛。做好觉悟了吗</span>”</p>
+    <p>“<span class="character">……牟庆，克洛。做好觉悟了吗</span>”</p>
     <p>“<span class="character">是</span>”</p>
     <p>“<span class="character">汪呜！</span>”</p>
     <p></p>
