--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -23,7 +23,7 @@
     <p></p>
     <p>鼹鼠的魔物是狼男、格利佩·菲特、果冻……阿修拉奥加和施瓦尔茨·沃尔夫范也看得到。</p>
     <p>无意中看到鼹鼠的魔物，眼睛果然还是受了伤。</p>
-    <p>脱离了那个的前方有台座，台座上面有gelipe·feter的剑和本凯最初使用的剑同样的东西。</p>
+    <p>脱离了那个的前方有台座，台座上面有gelipe·feter的剑和牟庆最初使用的剑同样的东西。</p>
     <p>台座下面开了一个洞，眺望了一会儿，令人惊讶的是与台座上设置的武器完全一样的武器从洞里被吐了出来。</p>
     <p>发出咕噜咕噜的声音回头一看，从树的根部魔物沸腾着，刚出生的魔物用空虚的眼睛向门外走去。</p>
     <p>没错……被复制了。魔物也好，武器也好。</p>
@@ -123,10 +123,10 @@
     <p>附近的seeker的村落很吵闹。也感到靠近这边的气息。</p>
     <p>也是，如果迷宫突然消失的话谁都会惊讶。</p>
     <p></p>
-    <p>“<span class="character">……本凯，快逃！”</span></p>
+    <p>“<span class="character">……牟庆，快逃！”</span></p>
     <p>“<span class="character">哈，是的！”</span></p>
     <p>暂且，这个场在被看见身姿之前逃跑。</p>
-    <p>梅赛德斯从那个场合全力逃跑，本凯他们也跟着跑了。</p>
+    <p>梅赛德斯从那个场合全力逃跑，牟庆他们也跟着跑了。</p>
     <p>总觉得好像抱着比预想还要麻烦的东西。</p>
     <p class="divline"></p>
     <p>梅赛德斯攻略迷宫后一周。都城里闹得天翻地覆。</p>
