--- a/OEBPS/Text/c019.xhtml
+++ b/OEBPS/Text/c019.xhtml
@@ -24,7 +24,7 @@
     <p><span class="character">“トライヌ发现了将时间封入容器的技术。使用这种技术的话，不影响季节，春夏秋在容器中造访，农产品可以在有田地的状态下保存。已经宣告了保存食物要熏制和醋腌制的时代结束。好吃的东西可以保持美味。这将对今后的航海产生重大影响”</span></p>
     <p>在这样充满活力的夜路上走过一辆马车。</p>
     <p>在里面的是梅赛德斯和他的母亲——琉迪亚·格鲁内瓦特。然后是随从的老婆婆三人。</p>
-    <p>本凯和克洛考虑到万一，现在每个都进入了迷宫哈尔巴德。</p>
+    <p>牟庆和克洛考虑到万一，现在每个都进入了迷宫哈尔巴德。</p>
     <p>说点题外话，梅赛德斯想和哈尔巴德长久地交往，所以取名为“蓝izen”。</p>
     <p>永远只是叫哈尔巴德的话会觉得无聊。</p>
     <p><span class="character">“话说回来，梅尔，你居然能借这种马车了。”</span></p><p><span class="character">“话说回来，梅尔，你居然能借这种马车了。”</span></p>“啊。seeker的工作进行得很顺利”</p>
@@ -136,7 +136,7 @@
     <p>而且还是接受了英才教育的精英。也许比自己更加坚强。</p>
     <p>（……先打三、不，打两成吧）</p>
     <p>如果攻击了两成，那么就是鼹鼠和骸骨剑士这些弱小的魔物一下子被击死的程度。</p>
-    <p>如果是本凯和克洛的话可以忍耐，甚至连舒瓦兹·史特里耶都没有效果。就是这样的威力攻击。</p>
+    <p>如果是牟庆和克洛的话可以忍耐，甚至连舒瓦兹·史特里耶都没有效果。就是这样的威力攻击。</p>
     <p>梅赛德斯想，这样的话就没问题了。</p>
     <p>（嘛，忍耐吧……大概）</p>
     <p>梅赛德斯并没有太大的压力，而是自然地缩短了与菲利克斯的距离。</p>
