--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -32,7 +32,7 @@
     <p>好歹用挣的钱相当豪游着。</p>
     <p>最后，伯恩哈特和梅赛德斯一样抱着胳膊静观战斗。</p>
     <p>也就是说，除了士兵和トライヌn，格瓦哈鲁特家连在一起的东西只剩下了。</p>
-    <p>梅赛德斯留在这里的理由只是观战。更进一步说，假设贝赛德兽的强度与初期的本凯相同，通过菲利克斯的战斗准确测量出自己以外的吸血鬼的强度。</p>
+    <p>梅赛德斯留在这里的理由只是观战。更进一步说，假设贝赛德兽的强度与初期的牟庆相同，通过菲利克斯的战斗准确测量出自己以外的吸血鬼的强度。</p>
     <p>到现在为止梅赛德斯没有比较的对象。</p>
     <p>因此，即使知道自己可能是强势的部类，也无法正确把握其差距有多大。</p>
     <p>因此，在这里看菲利克斯的战斗打算测量与别人和自己的差。</p>
