--- a/OEBPS/Text/c026.xhtml
+++ b/OEBPS/Text/c026.xhtml
@@ -35,7 +35,7 @@
     <p>迷宫从得到的时候开始几乎没加工,不过，只最下层例外地加工，为适应梅赛德斯的喜好的身姿定做。</p>
     <p>首先为了自己生活的朴素，哪里怀念的自己的家。这在世界上是看不到的，平成日本看到的二层楼房。</p>
     <p>稍微远的地方也有游泳池和温泉设施。</p>
-    <p>看来现在本凯和克洛正在使用温泉。</p>
+    <p>看来现在牟庆和克洛正在使用温泉。</p>
     <p>运动健身房里摆放着果冻，木制果冻暗黑进化着。</p>
     <p>梅赛德斯移动了迷宫内的适当的魔物，把书放在了看得见的位置。</p>
     <p>总之，在到达目的地之前，先看看书来解闷吧。</p>
