--- a/OEBPS/Text/c027.xhtml
+++ b/OEBPS/Text/c027.xhtml
@@ -32,7 +32,7 @@
     <p>身穿灰色大衣的样子看上去很威严。</p>
     <p>（真强啊）</p>
     <p>梅赛德斯看到教师后，直觉地意识到他是相当有实力的人。</p>
-    <p>恐怕比本凯还要高级吧。</p>
+    <p>恐怕比牟庆还要高级吧。</p>
     <p>如果自己也是一对一的话，不知道能不能赢。他感受到了如此强大。</p>
     <p>“<span class="character">接下来一年，我将担任你们的古斯塔夫·波尔特。</span></p>
     <p><span class="character">不过，明年我担当你们还是要看你们的努力。</span></p>
