--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -76,7 +76,7 @@
     <p>可是有关这个从开始之前开始梅赛德斯的压倒性胜利显现出来。</p>
     <p>不管怎么说，梅赛德斯上课时捕获的阿修塔尔本来就是不生活在平原上的，为了袭击吉克林德而被送入的凶恶怪物。</p>
     <p>不是能够用学生能够捕获的魔物来对抗的怪物，而是连A级别的seeker都可能不知不觉的对手。</p>
-    <p>问题是能否熟练使用这样的魔物，那里是遵从本凯和克洛的梅赛德斯。</p>
+    <p>问题是能否熟练使用这样的魔物，那里是遵从牟庆和克洛的梅赛德斯。</p>
     <p>没有任何问题，阿修塔尔通过停在梅赛德斯的手臂上显示出自己的忠诚。</p>
     <p>顺便一提，阿修塔尔的重量超过300公斤。</p>
     <p>“<span class="character">那么首先，梅赛德斯和汤姆。向前出去！</span>”</p>
