--- a/OEBPS/Text/c052.xhtml
+++ b/OEBPS/Text/c052.xhtml
@@ -87,7 +87,7 @@
     <p>和面包的搭配非常出众，只要让面包吸入这个汤，就能享受到不同的味道。</p>
     <p>这些菜都是由舒夫做的，完成度如此高的“菜肴”在吸血鬼国家即使是贵族也很少能吃到。</p>
     <p>虽然那个恶魔没有完全弄错方向的感觉，但梅赛德斯觉得真是个好拾得的东西啊。</p>
-    <p>说点题外话，本以为洞窟里的魔物都会做饭，于是本凯也做了料理，结果却拿出了像黑炭一样的东西，果然只有舒夫才奇怪。</p>
+    <p>说点题外话，本以为洞窟里的魔物都会做饭，于是牟庆也做了料理，结果却拿出了像黑炭一样的东西，果然只有舒夫才奇怪。</p>
     <p>木炭没办法只好让果冻吃了。</p>
     <p>“<span class="character">那你就是。什么时候才能公布菲利克斯是正当的继承人呢？</span>”</p>
     <p>“<span class="character">我在吃饭呢</span>”</p>
