--- a/OEBPS/Text/c053.xhtml
+++ b/OEBPS/Text/c053.xhtml
@@ -94,12 +94,12 @@
     <p>八十年前的兽人战争结束，伯恩哈特成为领主的时候出现的这个洞窟是布鲁特的经济中心。</p>
     <p>正因为有了这个迷宫，蓝特才发展到这种地步。</p>
     <p>梅赛德斯闯进了一个非常方便的迷宫。</p>
-    <p>此次的成员除了梅赛德斯、本凯、克洛这几个往常的成员外，也包括了舒夫。</p>
+    <p>此次的成员除了梅赛德斯、牟庆、克洛这几个往常的成员外，也包括了舒夫。</p>
     <p>前头配置从迷宫召唤了的wali·果冻。这是先行探索陷阱的任务。</p>
     <p>因为复印在窄的迷宫不能弄活那个机动力此次不发出。</p>
     <p>还有随身行李的登山口也没有出场。因为梅赛德斯自己用向迷宫的收纳这个方法无论多少道具搬运了废柴兽已经不需要。</p>
     <p>“<span class="character">好久没出场了</span>”</p>
-    <p>本凯一边嘎吱嘎吱地叫着铠甲，一边充满干劲。</p>
+    <p>牟庆一边嘎吱嘎吱地叫着铠甲，一边充满干劲。</p>
     <p>自从梅赛德斯上学园后，就再也没有出场机会了，所以显得非常明智。</p>
     <p>“<span class="character">如果能找到好的食材就好了。</span>”</p>
     <p>我不会再插进修夫了。</p>
