--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -40,7 +40,7 @@
     <p>（而且，太简单了……已经超过了十层的魔物，但出来的魔物都是果冻以下的……。</p>
     <p>虽然也有结成徒党出来的魔物，但单体的强度还是没什么了不起的）</p>
     <p>绝不是只靠果冻就能取胜的。</p>
-    <p>如果聚集了数目的魔物流石来自本凯的掩护攻击进入，如果只是果冻挑战这个洞窟已经死了吧。</p>
+    <p>如果聚集了数目的魔物流石来自牟庆的掩护攻击进入，如果只是果冻挑战这个洞窟已经死了吧。</p>
     <p>但是，即便如此，一对一的话，所有的敌人都在果冻以下。</p>
     <p>那个果冻多少锻炼后变得比本来强，但并不是特别强。</p>
     <p>这个迷宫太弱了……只能那样想。</p>
@@ -53,16 +53,16 @@
     <p>并且舒夫很快地解体死去的魔物也是约定。</p>
     <p>果然很弱。简单地，什么辛苦也没有连续不断下来的事能。</p>
     <p>这么简单的话，就让人怀疑是什么陷阱了。</p>
-    <p>“<span class="character">本凯，舒夫。你觉得这个迷宫怎么样？</span>”</p>
+    <p>“<span class="character">牟庆，舒夫。你觉得这个迷宫怎么样？</span>”</p>
     <p>“<span class="character">我觉得是没有反应的迷宫。出来的魔物只有杂兵</span>”</p>
-    <p>梅赛德斯决定听取本凯和舒夫的意见。</p>
+    <p>梅赛德斯决定听取牟庆和舒夫的意见。</p>
     <p>假设是从迷宫中诞生的他们，期待能提出比自己更有意义的意见。</p>
-    <p>对此，本凯说出了与梅赛德斯大致相同的感想。</p>
+    <p>对此，牟庆说出了与梅赛德斯大致相同的感想。</p>
     <p>“<span class="character">不是，主啊。这是一个很棒的迷宫。没有一个能使出来的魔物，以及长在这儿一棵草都不能使用的东西</span>”</p>
     <p>“<span class="character">喂，舒夫，这对你来说是件好事吧。主人要求的意见是……</span>”</p>
-    <p>“<span class="character">等一下，本凯</span>”</p>
-    <p>舒夫仍旧说些奇怪的话，本凯惊讶地遮住了话语。</p>
-    <p>但是，梅赛德斯好像被什么牵连着，阻止了本凯。</p>
+    <p>“<span class="character">等一下，牟庆</span>”</p>
+    <p>舒夫仍旧说些奇怪的话，牟庆惊讶地遮住了话语。</p>
+    <p>但是，梅赛德斯好像被什么牵连着，阻止了牟庆。</p>
     <p>这是……意外，不是重要的事吗？我是这样想的。</p>
     <p>“<span class="character">继续吧，舒夫</span>”</p>
     <p>“<span class="character">是的。譬如那里生长的蘑菇,不过，那个是食用。</span></p>
