--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -40,7 +40,7 @@
     <p></p>
     <p>如果就这样放任不管的话，果冻会死，所以回到了蓝天蓼蓝BOSS的钥匙，克洛替换着飞了出去。</p>
     <p>用眼睛也止不住的敏捷咬小龙的脚，使之下降。</p>
-    <p>接着，本凯挥下大剑，斩断了尾巴。</p>
+    <p>接着，牟庆挥下大剑，斩断了尾巴。</p>
     <p>小龙也马上站起来,不过，此次在那里梅赛德斯自己跳入了。</p>
     <p>就那样气势任凭一只手一闪地闪动burutoizen,不过，刃在咬住头的地方停住了。</p>
     <p></p>
