--- a/OEBPS/Text/c061.xhtml
+++ b/OEBPS/Text/c061.xhtml
@@ -11,57 +11,57 @@
 </head>
 
 <body>
-    <h1>61. すり替わり</h1>
-    <p>弗里德里克の姦計に嵌り、白装束達に捕えられてしまった菲利克斯達は馬車に乗せられてベアトリクス帝国へと運ばれていた。</p>
-    <p>両手両足は縛られ、武器も取り上げられてしまったので抵抗したくても出来ない。</p>
-    <p>白装束達は敵襲を警戒しながら慎重に、しかし素早く移動して国境へ向かっている。</p>
-    <p>恐らく国境付近に本隊が待機しているのだろう。</p>
-    <p>“<span class="character">坊主も災難だったな。まあ俺等の目的は王女様だけだから、坊主は国境前で降ろしてやるよ</span>”</p>
-    <p>“<span class="character">但是队长。上层说杀死所有的干扰者……</span>”</p>
-    <p>“<span class="character">邪魔者なんざいなかった。ここにいるのは乗る馬車を間違えただけの現地の坊主だ。そうだな？</span>”</p>
-    <p>“<span class="character">はっ、その通りであります！</span>”</p>
-    <p>白装束が何か言っているが、菲利克斯はそれどころではない。</p>
-    <p>守らなければならない王女を守れなかった。</p>
-    <p>しかもあろう事か学園長が内通者だったのだ。</p>
-    <p>それを見抜けなかった己の間抜けさと、まんまと踊らされたという事実。</p>
-    <p>それらが伸しかかり、菲利克斯の気を沈ませていた。</p>
-    <p>“<span class="character">殿下は……これからどうなるんだ</span>”</p>
-    <p>“<span class="character">谁知道呢……嘛，被说了不能让她受伤，我想应该不会被恶劣对待吧</span>”</p>
-    <p>菲利克斯の問いに隊長と呼ばれている白装束が答えた。</p>
-    <p>隊長といえど、所詮は隠密の一部隊の長に過ぎない。</p>
-    <p>この作戦の詳細な目的までは知らないのだろう。</p>
-    <p>“<span class="character">ここだけの話、帝国うちは女尊男卑だ。女で王家で王剣を使えるとくりゃあ、まず優遇されると思っていい。</span></p>
-    <p>聞いた話じゃ女だけで子作り出来ないか毎日研究して、それが成功した暁にゃ男は全員国を追い出されるって噂だ。</p>
-    <p>ありえねえとは思うが、そんな噂が立つくらいにうちの女帝様は男嫌いで女好きの真性レズビアンだ。</p>
-    <p>つーわけでお前さんは国境前で降ろしてやる。国境越えたら最悪殺されるかもしれねえし”</p>
-    <p>ぞっとする話であった。</p>
-    <p>ベルンハルトといい、何故上に立つ者というのは誰もかれも極端な方向に振り切れているのだろう。</p>
-    <p>むしろそれこそが上に立つ素質とでも言うのか。</p>
-    <p>それはともかく、菲利克斯は今ここを降りるわけにはいかない。</p>
-    <p>自分がここを離れてしまえば吉克林德は敵地で一人になってしまう。</p>
-    <p>それがどれだけ心細いか……。</p>
-    <p>自分などが頼りになるとは思えない。</p>
-    <p>しかし敵地で少女を一人にするほど菲利克斯は薄情ではないのだ。</p>
-    <p>それに見よ。本来気が強いはずの吉克林德は怯えているのか、先程から一言も声を発していないではないか。</p>
-    <p>可哀想に……どれだけ恐怖を感じているのか。</p>
-    <p>菲利克斯がそう思っているうちに白装束達は部屋を出て行った。</p>
-    <p>ここは馬車であるが、菲利克斯達の逃走防止として狭い個室が用意されている。</p>
-    <p>ドアが閉められ、鍵をかけられた。</p>
-    <p>脱出出来るような場所はどこにもない。</p>
-    <p>“<span class="character">殿下、聞いてください。逃げる前に殿下の乗っていた魔物に手紙を持たせました。</span></p>
-    <p><span class="character">上手くあの魔物がブルートに着けば、すぐに救助隊が組まれるはずです</span>”</p>
+    <h1>61. 替身</h1>
+    <p>被弗里德里克的诡计所困，菲利克斯等人被白装束们捕获，被带上马车送往贝阿特丽克斯帝国。</p>
+    <p>双手双脚被绑，武器也被夺去，无法反抗。</p>
+    <p>白装束们小心谨慎地移动，警惕着可能的敌袭，迅速朝着边境行进。</p>
+    <p>大概是本队在边境等候着。</p>
+    <p>“<span class="character">这小子也真是倒霉，不过我们的目的只有公主一人，到了边境就放他下车吧。</span>”</p>
+    <p>“<span class="character">但是队长。上面说要杀掉所有的干扰者……</span>”</p>
+    <p>“<span class="character">没有干扰者。这里只是个本地搭错了车的小子而已。对吧？</span>”</p>
+    <p>“<span class="character">是的，就是这样！</span>”</p>
+    <p>白装束们在说些什么，但菲利克斯没有心思去理会。</p>
+    <p>他没能守护住必须保护的公主。</p>
+    <p>而且校长居然是内奸。</p>
+    <p>没能识破这一点，完全被骗了。</p>
+    <p>这一切让菲利克斯感到沮丧。</p>
+    <p>“<span class="character">殿下会……接下来怎么办呢？</span>”</p>
+    <p>“<span class="character">谁知道呢……嘛，被说了不能让她受伤，我想应该不会被恶劣对待吧。</span>”</p>
+    <p>白装束中被称为队长的人回答了菲利克斯的问题。</p>
+    <p>即使是队长，也不过是一支密探小队的领导罢了。</p>
+    <p>对这项计划的详细目的可能并不清楚。</p>
+    <p>“<span class="character">这里说句实话，帝国内部是重男轻女的。如果是女性且能使用王家剑的话，大概会受到优待。</span></p>
+    <p>听说，只要是女性，就每天研究着能否只靠女性进行生育，如果成功的话，男性就会全部被驱逐出国。</p>
+    <p>虽然觉得不可信，但有这种传闻，说明我们的女帝恨男爱女到了极点。</p>
+    <p>总之，你会在边境降下车。越过边境，最糟糕的情况可能是被杀。”</p>
+    <p>这是令人不寒而栗的谈话。</p>
+    <p>贝尔恩哈特也好，为什么说到站在顶端的人，每个人都偏向极端呢？</p>
+    <p>或许这才是站在顶端的素质吧。</p>
+    <p>不管怎样，菲利克斯现在无法下车。</p>
+    <p>如果自己离开这里，吉克林德将会独自一人处于敌地。</p>
+    <p>那感觉有多么孤立无援啊……。</p>
+    <p>我不认为我自己是可靠的。</p>
+    <p>然而，菲利克斯并不是那么冷酷，会把一个少女留在敌人的地盘上。</p>
+    <p>而且看看吉克林德。原本应该很坚强的吉克林德是否感到恐惧，从刚才开始就没有说一句话。</p>
+    <p>可怜啊……她到底有多害怕。</p>
+    <p>菲利克斯正思考着这些时，白装束们已经离开了房间。</p>
+    <p>这是一辆马车，但是为了防止菲利克斯他们逃跑，准备了一个狭小的单间。</p>
+    <p>门被关上了，锁上了。</p>
+    <p>没有任何可以逃脱的地方。</p>
+    <p>“<span class="character">殿下，请听我说。在逃跑之前，我把信交给了您骑的魔物。</span></p>
+    <p><span class="character">如果那只魔物能交给布鲁特，救援队应该会很快到达。</span>”</p>
     <p>“<span class="character">…………</span>”</p>
-    <p>菲利克斯は白装束に追われていた時、吉克林德の使っていたギガンティッシュハムスターの口に袋を詰めた。</p>
-    <p>あの中には万一の時の為に救助を要請する為の手紙が入っている。</p>
-    <p>なのでギガンティッシュハムスターがあの袋を吐き出したり、あるいはゴール地点と全く関係ない方向に行ったりしない限りは無事に届くはずだ。</p>
-    <p>問題は……ギガンティッシュハムスターは賢くないので、コースアウトをしてそのままブルートと関係ない場所に住み着いて野生化してしまう可能性が高いという事か。</p>
-    <p>それを聞いた吉克林德は小さく首を振る。</p>
-    <p>“<span class="character">んー……それじゃあ二十点かな。あの状況で機転を利かせたのは評価出来るけどハムスターが主もなく目的地に着くわけないよ</span>”</p>
-    <p>それは驚くほど冷静で、怯えとは無縁な声色であった。</p>
-    <p>それどころか菲利克斯の取った手段を酷評する余裕すらある。</p>
-    <p>流石にこれには菲利克斯も違和感を覚え、吉克林德をまじまじと見た。</p>
-    <p>すると吉克林德は縛られていたはずの手を自由に動かして、ウィッグを外す。</p>
-    <p>そこにいたのは、ドヤ顔ダブルピースをした汉娜であった。</p>
+    <p>菲利克斯在被白装束追赶时，把信塞进了吉克林德的那只巨型仓鼠的嘴里。</p>
+    <p>袋子里装着一封为万一之时请求救援的信。</p>
+    <p>只要那只巨型仓鼠不吐出袋子，也不会跑到完全与目的地无关的地方，信应该就能安全到达。</p>
+    <p>问题是……巨型仓鼠并不聪明，所以很可能会离开赛道，然后在布鲁特之外的地方定居，野化。</p>
+    <p>听到这个吉克林德轻轻地摇了摇头。</p>
+    <p>“<span class="character">嗯……那就给二十分吧。在那种情况下想到这个，我觉得还是值得称赞的，但是仓鼠怎么可能到达目的地呢。</span>”</p>
+    <p>这话说得非常冷静，毫不畏惧。</p>
+    <p>更何况她甚至还有时间来批评菲利克斯的方法。</p>
+    <p>对此，菲利克斯也感到有些不自在，她凝视着吉克林德。</p>
+    <p>然后吉克林德解开了原本被绑着的手，取下了假发。</p>
+    <p>在那里的是汉娜，她一脸得意地露出双手胜利的姿势。</p>
     <p>（何いィィィィィ―ッ！！？）　</p>
     <p>すり替えておいたのさ！</p>
     <p>そんな心の声が聞こえそうな程、それはそれは見事なドヤ顔であった。</p>
