--- a/OEBPS/Text/c062.xhtml
+++ b/OEBPS/Text/c062.xhtml
@@ -88,19 +88,19 @@
     <p>看来汉娜从一开始就潜藏着那个魔物。</p>
     <p>本来就是作为野生在这个附近存在的魔物。因为固体差等吸血鬼是不明白的，所以即使被目击了也最好是假装野生的兔子。</p>
     <p>小兔子一走到梅赛德斯面前，鼻子就灵活地动起来。想传达些什么吧。</p>
-    <p>“<span class="character">出去吧，本凯</span>”</p>
-    <p>梅赛德斯从迷宫召唤本凯做翻译，让小兔站在他面前。</p>
-    <p>小兔子向本凯诉说着什么，本凯哼哼地点了点头。</p>
+    <p>“<span class="character">出去吧，牟庆</span>”</p>
+    <p>梅赛德斯从迷宫召唤牟庆做翻译，让小兔站在他面前。</p>
+    <p>小兔子向牟庆诉说着什么，牟庆哼哼地点了点头。</p>
     <p>然后，困惑地朝着梅赛德斯的方向。</p>
     <p>“<span class="character">主，这只兔子本来什么都没说。是翻译以前的问题</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p>兔子没有声带。</p>
     <p>所以像狗和猫一样发出叫声基本上是不可能的。</p>
     <p>如果是养过兔子的人，可能会听到兔子的“呜—”这种独特的叫声，但与其说是在叫，不如说是“发出声音”更为正确吧。</p>
-    <p>也就是翻译以前的问题。小兔子连魔物语都没说，当然本凯不可能翻译。</p>
+    <p>也就是翻译以前的问题。小兔子连魔物语都没说，当然牟庆不可能翻译。</p>
     <p>不久，被无法传达心情的小兔子开始和dandan一起踢地面，但是不明白的东西就不知道了。</p>
     <p>“<span class="character">……嗯</span>”</p>
-    <p>梅赛德斯挽回本凯，挽起手臂思考。</p>
+    <p>梅赛德斯挽回牟庆，挽起手臂思考。</p>
     <p>总之，兔子有通过人语的程度的智力。</p>
     <p>那么只能用YES、NO来回答问题，用点头或者摇头来回答。</p>
     <p>话说汉娜果然聪明透顶。</p>
