--- a/OEBPS/Text/c075.xhtml
+++ b/OEBPS/Text/c075.xhtml
@@ -76,7 +76,7 @@
     <p>“<span class="character">‘解冻’！</span>”</p>
     <p>那样的话，破坏那个联合。</p>
     <p>随着梅赛德斯的号令，被封印在哈尔巴德的魔物们出现了。</p>
-    <p>全身铠甲的，总觉得是隔了好久的出场感觉的本凯。</p>
+    <p>全身铠甲的，总觉得是隔了好久的出场感觉的牟庆。</p>
     <p>被黑色体毛覆盖的大狼，克洛。</p>
     <p>在天花板滑雪板上飞的是皮可。</p>
     <p>舒夫右手拿着菜刀，左手拿着平底锅。再也不干这家伙了。</p>
@@ -99,7 +99,7 @@
     <p>猪是没有用的。</p>
     <p>因为积分的浪费，梅赛德斯决定不再批量生产了。</p>
     <p>“<span class="character">哇哦哦哦哦哦！</span>”</p>
-    <p>总觉得紧张的本凯挥舞着武器，展现出一骑当千的活跃。</p>
+    <p>总觉得紧张的牟庆挥舞着武器，展现出一骑当千的活跃。</p>
     <p>一个接一个地切开植物，完全敌人不靠近。</p>
     <p>“<span class="character">弗兰贝！</span>”</p>
     <p>从平底锅里发出火焰，用奇怪的技能烧掉植物的是舒夫。</p>
