--- a/OEBPS/Text/c076.xhtml
+++ b/OEBPS/Text/c076.xhtml
@@ -80,7 +80,7 @@
     <p>“<span class="character">凯恩！</span>”</p>
     <p>无法回避，刻下了几具魔物，克洛也受了伤。</p>
     <p>复制品振翅高飞，用风压将花瓣吹飞，修夫用平底锅里的火焰全部烧毁。</p>
-    <p>并且本凯因为是全身铠甲流石平安,不过，由于这个很大地战况趋向了向。</p>
+    <p>并且牟庆因为是全身铠甲流石平安,不过，由于这个很大地战况趋向了向。</p>
     <p>“<span class="character">回来，克洛</span>”</p>
     <p>因为暂且就这样克洛快要被杀了前返回，重新召唤了蟑螂的群。</p>
     <p>但终究只是凑齐了数量，既没有战略也没有阵形。</p>
