--- a/OEBPS/Text/c079.xhtml
+++ b/OEBPS/Text/c079.xhtml
@@ -93,10 +93,10 @@
     <p>“<span class="character">不，不做也可以。心情很好</span>”</p>
     <p>“<span class="character">这样啊</span>”</p>
     <p>试着问了一下，出乎意料地回答得很干脆，现场被微妙的空气包围了。</p>
-    <p>从后面感觉到本凯他们的‘察言观色吧’这样的视线，不是心理作用吧。</p>
+    <p>从后面感觉到牟庆他们的‘察言观色吧’这样的视线，不是心理作用吧。</p>
     <p>梅赛德斯准备好了武器，以便甩开它。</p>
     <p>“<span class="character">我走了！</span>”</p>
-    <p>梅赛德斯踢地跳跃，与此相应的本凯他们也散开了。</p>
+    <p>梅赛德斯踢地跳跃，与此相应的牟庆他们也散开了。</p>
     <p>梅赛德斯的实力比上次的历史战有所提高，加上这次史蒂夫和皮可。</p>
     <p>而且这次是突如其来的迷宫攻击，与BOSS对战。</p>
     <p>也就是说，比起上次的挑战，以压倒性的有利条件开始了战斗。</p>
@@ -104,12 +104,12 @@
     <p>“<span class="character">……！</span>”</p>
     <p>“<span class="character">好温暖啊</span>”</p>
     <p>用胳膊的一挥弹出了梅赛德斯，更加手臂与枝分离成为几个触手袭击了全体人员。</p>
-    <p>皮可和克洛要敏捷地避开，本凯要坚固防御。</p>
+    <p>皮可和克洛要敏捷地避开，牟庆要坚固防御。</p>
     <p>舒夫深深地吸了一口气，从口中吐出火焰，烧掉了触手。</p>
     <p>什么，如果想做像恶魔一样的攻击不是也能吗。</p>
     <p>“<span class="character">比！</span>”</p>
     <p>皮可将翅膀变成钢，从急速下降开始进行撞击。</p>
-    <p>这一击使帕拉迪斯的肩膀大幅度裂开，接着本凯放出了弩进行牵制。</p>
+    <p>这一击使帕拉迪斯的肩膀大幅度裂开，接着牟庆放出了弩进行牵制。</p>
     <p>梅赛德斯跳入那里，大幅度地挥舞着哈尔巴德。</p>
     <p>“<span class="character">重力10倍！</span>”</p>
     <p>把重量放在上面的向下甩！</p>
@@ -118,7 +118,7 @@
     <p>这样想的一瞬间，从伤口的断面植物生长互相缠绕的下一个瞬间完成了接合。</p>
     <p>“<span class="character">什……</span>”</p>
     <p>惊愕地停止了行动，但在战斗中却是致命的。</p>
-    <p>被从侧面飞过来的触手打飞，在地面上反弹两次，三次后被本凯接住。</p>
+    <p>被从侧面飞过来的触手打飞，在地面上反弹两次，三次后被牟庆接住。</p>
     <p>没想到和历史相比，没有耐久力……倒不如相反。</p>
     <p>半吊子的损坏一瞬间再生的那样，这家伙耐久力出色。</p>
     <p>这，看起来不容易……。</p>
