--- a/OEBPS/Text/c080.xhtml
+++ b/OEBPS/Text/c080.xhtml
@@ -86,7 +86,7 @@
     <p>帕拉迪斯也瘦了，没有到刚才为止的威胁。</p>
     <p>这样两手。通往胜利的道路又被开拓了。</p>
     <p>但是还不够。帕拉迪斯依旧在继续再生，只有对根部的攻击坚决防御着。</p>
-    <p>本凯和舒夫也努力着,不过，怎么也不攻断。</p>
+    <p>牟庆和舒夫也努力着,不过，怎么也不攻断。</p>
     <p>那么接下来，夺取攻击手段。</p>
     <p>（虽然正式演出……看了一遍范本。</p>
     <p>脑海中描绘的是一年前追查伪王时的一战。</p>
@@ -105,10 +105,10 @@
     <p>这下三着。夺走敌人的反击能力，弱化到可以打倒梅赛德斯的水平。</p>
     <p>那么之后就只有将军。</p>
     <p>《贝弗莱恩》完全从地面剥离，拿着哈尔伯特突进。</p>
-    <p>此后本凯和舒夫持续，三人同时打进了连击。</p>
+    <p>此后牟庆和舒夫持续，三人同时打进了连击。</p>
     <p>“<span class="character">啊！</span>”</p>
     <p>梅赛德斯所持有的哈尔巴德被人外的膂力所折腾，从一端劈开帕拉迪斯的根，使其受伤。</p>
-    <p>于是，本凯挥舞着武器，舒夫吐出了火焰。</p>
+    <p>于是，牟庆挥舞着武器，舒夫吐出了火焰。</p>
     <p>突然像修夫想起了一样止住吐出火焰，切换了用菜刀的攻击。</p>
     <p>不，就这样就可以了。事到如今不要再变回武器造型。</p>
     <p>梅赛德斯在最后的完成时从侧面打出帕拉迪斯使其上下翻转，使其根向上翻转。</p>
