--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -81,7 +81,7 @@
     <p>“<span class="character">我那看上去很了不起的对手，真是太滑稽了……</span>”</p>
     <p>刚才还在笑梅赛德斯的seeker们好像低于B级。</p>
     <p>但是，没想到B居然会这么吃惊。</p>
-    <p>在梅赛德斯中，B等级只有“和以前的菲利克斯差不多”的强度，因为只有被本凯全灭的派对的印象，所以并不觉得很厉害。</p>
+    <p>在梅赛德斯中，B等级只有“和以前的菲利克斯差不多”的强度，因为只有被牟庆全灭的派对的印象，所以并不觉得很厉害。</p>
     <p>不，这么说来，尤利娅也是B级别吧。</p>
     <p>“<span class="character">啊，不，失礼了。确认了委托的受理。</span></p>
     <p><span class="character">迷宫在出了这栋楼往南走一点的地方</span>”</p>
