--- a/OEBPS/Text/c115.xhtml
+++ b/OEBPS/Text/c115.xhtml
@@ -113,7 +113,7 @@
     <p>但是，失去莱斯利和这本书是一个沉重的打击。</p>
     <p>所以为了以防万一，把书做成了可以复制的状态。</p>
     <p>还有……总之，应该先把在莱斯利场附近秘密长进的魔物作为护卫藏起来吧。</p>
-    <p>或者，把教育交给本凯莉的犹莉亚也许也差不多成了她使用的东西了，在测试她的意义上也可以交给犹莉亚。</p>
+    <p>或者，把教育交给牟庆莉的犹莉亚也许也差不多成了她使用的东西了，在测试她的意义上也可以交给犹莉亚。</p>
     <p>也许是考虑太多了，如果浪费的话那是最好的。</p>
     <p>但是如果不小心失败了，事后后悔就晚了。</p>
 </body>
