--- a/OEBPS/Text/c116.xhtml
+++ b/OEBPS/Text/c116.xhtml
@@ -15,13 +15,13 @@
     <p>现在梅赛德斯拥有两个迷宫。</p>
     <p>一个是六年前攻占的施塔克迷宫。</p>
     <p>平时作为装饰品放在口袋里的东西，是战斗时成为哈尔巴德『蓝色眼圈』肆虐的主要武器。</p>
-    <p>梅赛德斯使用的魔物中最信任的阿修拉奥加的本凯和施瓦尔茨·沃尔芬格的克洛，原本也是在这里捕获的魔物。</p>
+    <p>梅赛德斯使用的魔物中最信任的阿修拉奥加的牟庆和施瓦尔茨·沃尔芬格的克洛，原本也是在这里捕获的魔物。</p>
     <p>其次，曾经从背面对奥尔克斯有过威胁的贝阿特里克斯帝国所有的迷宫。</p>
     <p>这是女帝贝阿特里克斯所使用的，被称为“帝国迷宫”。</p>
     <p>虽然是以植物系的魔物为主的迷宫，但也是贝塞代蒙的舒夫、阿什塔尔的皮可等出身的迷宫，所以并不是只有植物系。</p>
     <p>这两个是现在梅赛德斯所有的迷宫，其他判明所在的是伯恩哈特（大概）所有的实践迷宫、吉克林德所有的王剑、以及在复杂的家族问题之后，交给哥哥菲利克斯的『真王派』所有的迷宫的三个。</p>
     <p>在这个“真王”问题上，梅赛德斯以事情的发展而保管的，是被供奉为真王的可怜少年马克斯·法特，和虽然实力强悍但是头脑很遗憾的隐秘的叫尤利娅的女人。</p>
-    <p>梅赛德斯把这两个人的教育交给了本凯，一直放任不管。</p>
+    <p>梅赛德斯把这两个人的教育交给了牟庆，一直放任不管。</p>
     <p>但是，想着差不多该好一点了，所以决定看看情况。</p>
     <p>在自己的迷宫中收纳自己，在迷宫内行走。</p>
     <p>在整个改造了的二十四层的健身房里，在哥布林格勒的指导下，哥布林们积累了训练，都得到了很健壮的肉体。</p>
@@ -31,20 +31,20 @@
     <p>梅赛德斯无视了流着汗（？）一边追赶着自己的果冻，朝下走去。</p>
     <p>最下层是居住空间，建有梅赛德斯喜欢的三层房子。</p>
     <p>以前是两层楼，但是因为居民增加了，所以不久前增建了三层楼。</p>
-    <p>现在，在那所房子里，本凯应该在对马克斯和尤利娅进行教育。</p>
+    <p>现在，在那所房子里，牟庆应该在对马克斯和尤利娅进行教育。</p>
     <p>一靠近家，首先在家外面放松的克洛摇着尾巴走来，她便摸了摸克洛的头。</p>
     <p>因为是自己的家，所以完全不客气地打开门去起居室。</p>
-    <p>在那里隔着桌子坐着本凯、马克斯、尤利娅，还有作为教师的角色委托本凯支持的哥布林赫克斯。</p>
+    <p>在那里隔着桌子坐着牟庆、马克斯、尤利娅，还有作为教师的角色委托牟庆支持的哥布林赫克斯。</p>
     <p>其他梅赛德斯所有（？）作为魔物以外的存在，是女帝贝阿特里克斯，但是那个好像对教育不好，所以在帝国迷宫那边建了房子，让他住在那里。所以不在这里。</p>
     <p>“<span class="character">！</span>”</p>
     <p>梅赛德斯一走进起居室，马克斯就慌慌张张地像脱兔似地逃走，蹲在屋角。</p>
     <p>嗯，在马克斯看来，梅赛德斯是一度差点被她杀了的对手，也是现在进行时的幽禁自己的人。不可能抱有好的感情。</p>
-    <p>“<span class="character">本凯，马克斯和尤利娅的教育怎么样？</span>”</p>
+    <p>“<span class="character">牟庆，马克斯和尤利娅的教育怎么样？</span>”</p>
     <p>“<span class="character">啊，马克斯那边很顺利。本来只是被利用的，头脑不坏吧。</span>”</p>
     <p>马克斯曾经被一个名叫埃尔菲的罗勒-三文鱼的男人祭奠，真心相信自己是正当国王的血脉，可以拯救国家。</p>
     <p>他没有任何恶意，他从心底认为自己的行动是为了国家和人民的。</p>
     <p>但是因为是傀儡，所以完全没有多余的知识，所以他是一个一无所知的裸体国王。</p>
-    <p>看来，多亏了本凯的教育，这种状态才得以顺利改善。</p>
+    <p>看来，多亏了牟庆的教育，这种状态才得以顺利改善。</p>
     <p>“<span class="character">哇哦哦哦哦……！别，别看我……！我是你的后生之秀，所以请不要行走的耻辱的我……。我，我重复着多么令人羞愧的言行啊啊啊啊……</span>”</p>
     <p>……被改善的结果，好像意识到自己做了多么可耻的事情。</p>
     <p>他被供奉在罗勒的时候自称是马克斯·冯·奥尔库斯·法斯特。</p>
@@ -87,7 +87,7 @@
     <p>实际上如果只遵守命令的话，是绝对达不到一流的，需要瞬间的判断力。</p>
     <p>但是，这是因为有足够的头脑来判断的。</p>
     <p>如果自己想的话只会产生多余的结果的话，那么彻底地使用等待指示的道具会比较有用。</p>
-    <p>本凯也是这么想的，这样教的吧。</p>
+    <p>牟庆也是这么想的，这样教的吧。</p>
     <p>“<span class="character">第二问，你不能做的事是？</span>”</p>
     <p>“<span class="character">自己思考的事情。我只要是遵从你的剑就可以了</span>”</p>
     <p>不能让尤利娅这种类型的人做的事。</p>
