--- a/OEBPS/Text/c117.xhtml
+++ b/OEBPS/Text/c117.xhtml
@@ -91,7 +91,7 @@
     <p>和迷宫的守护者战斗，胜利，然后得到迷宫。那里没有变更。</p>
     <p>但是那个时候如果带着莱斯利的话，最糟糕的是她会丧命的吧。</p>
     <p>其他暂且不说，只有守护者是通过梅尔处理，以万全的状态和万全的成员不挑战的话，很有可能输的对手。没有一边庇护莱斯利一边战斗的余地。</p>
-    <p>因此，如果要和守护者战斗的话，我认为只有自己、本凯、克洛、舒夫、皮可、尤利娅、Beactorix这样强大的成员来加强是最好的。</p>
+    <p>因此，如果要和守护者战斗的话，我认为只有自己、牟庆、克洛、舒夫、皮可、尤利娅、Beactorix这样强大的成员来加强是最好的。</p>
     <p>很遗憾，我不想把莱斯利加入自己队伍。</p>
     <p>这也有她是没到和守护者战斗的等级的原因，也有认为让莱斯利死是损失的原因。</p>
     <p>也有制作了莱斯利的克隆这样的粗暴的职业……即使克隆人100%继承本人的人格和记忆，也不知道她是否继承了自己的想象力。</p>
