--- a/OEBPS/Text/c118.xhtml
+++ b/OEBPS/Text/c118.xhtml
@@ -36,12 +36,12 @@
     <p>但是擅长支援魔法和回复魔法，不管怎么说比起自己战斗更擅长向后退指挥军团”</p>
     <p>从茨瓦尔夫那里很快得到了情报，梅赛德斯对那副铠甲产生了兴趣。</p>
     <p>细细想来，在梅赛德斯作为主力使用的战斗力中，还没有支援型。</p>
-    <p>梅赛德斯和强敌战斗时最重要的战斗力是本凯、克洛、皮科、舒夫……然后从弗雷德里克那里夺取的恶魔福斯特也可以成为王牌。</p>
+    <p>梅赛德斯和强敌战斗时最重要的战斗力是牟庆、克洛、皮科、舒夫……然后从弗雷德里克那里夺取的恶魔福斯特也可以成为王牌。</p>
     <p>其他的信任度稍低，所以不能过于相信，但是尤利娅和贝尔特里克斯的战斗力也是无可挑剔的。</p>
     <p>最后是斯塔克迷宫的守护者施瓦茨・史塔利和帝国迷宫的守护者帕拉蒂斯。这两个机构甚至可能毁灭一个国家的军队，真是绝招。</p>
     <p>但是，迷宫的守护者可以使用的战斗力不能算守护者。</p>
     <p>对迷宫的守护者的对手必须挑战没有迷宫主人的力量，只能使用作为主人的力量以外获得的战斗力。</p>
-    <p>因此，在成为主人之前捕获的本凯他们、原本连魔物都没有的尤利娅和贝尔特里克斯的话就可以拿出来，但是成为主人后用主人权限得到的迷宫里的魔物们和守护者都不能使用。</p>
+    <p>因此，在成为主人之前捕获的牟庆他们、原本连魔物都没有的尤利娅和贝尔特里克斯的话就可以拿出来，但是成为主人后用主人权限得到的迷宫里的魔物们和守护者都不能使用。</p>
     <p>当然，如果梅赛德斯通过这个迷宫的话，这个多米尼安就属于梅赛德斯，可以大量生产。</p>
     <p>但是无论增加多少，都不能用于今后与守护者的战斗。</p>
     <p>因为在攻略后，那是“侍奉着迷宫主人”而不是“侍奉着梅赛德斯”。</p>
