--- a/OEBPS/Text/c131.xhtml
+++ b/OEBPS/Text/c131.xhtml
@@ -15,7 +15,7 @@
     <p>“<span class="character">我想象附近有一个洞穴或一间破屋，因为它是袭击者的藏身之处，但是……这是一个奇怪的藏身之处，不是吗？</span>”</p>
     <p></p>
     <p>在袭击吸血鬼和埃尔菲贵族并杀害的贼的藏身处判明后半天。</p>
-    <p>梅赛德斯和莱斯利，还有本凯和克洛在汉娜的带领下，到达了离村落很远的树林前。</p>
+    <p>梅赛德斯和莱斯利，还有牟庆和克洛在汉娜的带领下，到达了离村落很远的树林前。</p>
     <p>根据汉娜抓到的贼的证言，这里好像是他们的藏身之处，但与一般想象中的藏身之处相去甚远。</p>
     <p>如果说是随意的想象的话就到此为止了，但是在梅赛德斯中，贼给人的印象是住在目标附近的洞窟里。</p>
     <p>不过，这片森林离村子还挺远的，也不清楚是不是森林。</p>
@@ -95,7 +95,7 @@
     <p>没有哪个是正确的答案。</p>
     <p>但是至少，那个讨论本身确实不应该在这个场合进行。</p>
     <p>梅赛德斯把哈尔巴德扛在肩上，汉娜也从怀里拿出匕首。</p>
-    <p>莱斯利也看到谈话结束了，扛着枪，在紧急情况下，本凯马上站在她的右边。</p>
+    <p>莱斯利也看到谈话结束了，扛着枪，在紧急情况下，牟庆马上站在她的右边。</p>
     <p></p>
     <p>“<span class="character">我们靠近的事对方也已经注意到了。你觉得应该怎么进攻？</span>”</p>
     <p></p>
@@ -157,15 +157,15 @@
     <p>在剩下的两个前锋中，一个人竟然转身逃跑了。</p>
     <p>另一方在明知会被打的基础上发动特攻，紧急接近梅赛德斯等人。</p>
     <p>但是，这种鲁莽的突击不会成为威胁。</p>
-    <p>前面飞出的克洛以像风一样的速度咬断了福格拉的单翼，接着用剑砍掉了本凯剩下的翅膀，抓住福格拉的头打到了地上。</p>
+    <p>前面飞出的克洛以像风一样的速度咬断了福格拉的单翼，接着用剑砍掉了牟庆剩下的翅膀，抓住福格拉的头打到了地上。</p>
     <p></p>
-    <p>“<span class="character">本凯，莱斯利，射击！</span>”</p>
+    <p>“<span class="character">牟庆，莱斯利，射击！</span>”</p>
     <p>“<span class="character">如您所愿！</span>”</p>
     <p>“<span class="character">啊……喂，这样啊，突然……</span>”</p>
     <p></p>
     <p>梅赛德斯发出指示，马上击落逃跑的四格拉。</p>
     <p>梅赛德斯自己现在，用重力魔法每个据点在拘留中不能转移到攻击中。</p>
-    <p>本凯迅速地射出箭……但是，毕竟距离太远了。箭被轻松地回避了，接着莱斯利连射枪，这是因为毛手毛脚的缘故，距离更空了。</p>
+    <p>牟庆迅速地射出箭……但是，毕竟距离太远了。箭被轻松地回避了，接着莱斯利连射枪，这是因为毛手毛脚的缘故，距离更空了。</p>
     <p>不过，似乎是一击命中，奔跑的福尔杰拉的一条腿飞了出去……但是，还不至于掉下来。</p>
     <p></p>
     <p>“<span class="character">呃……那是什么枪？它会到达这个距离吗？说起来你刚才是连射了？</span>”</p>
