--- a/OEBPS/Text/c133.xhtml
+++ b/OEBPS/Text/c133.xhtml
@@ -33,7 +33,7 @@
     <p></p>
     <p>梅塞德斯这么一说，已经提前在后面等着的多米尼翁和皮琼从前面走了出来。</p>
     <p>这个皮琼在攻略迷宫时作为莱斯利的交通工具活跃着，不知为什么一直跟着的个体。</p>
-    <p>让本凯翻译了一下，总觉得这个皮琼是顺其自然一起行动的，对梅赛德斯和莱斯利，好像擅自抱有伙伴意识。</p>
+    <p>让牟庆翻译了一下，总觉得这个皮琼是顺其自然一起行动的，对梅赛德斯和莱斯利，好像擅自抱有伙伴意识。</p>
     <p>作为梅赛德斯自不必说，完全没有作为伙伴的打算。</p>
     <p>为了快捷方式在迷宫内的强制横向滚动区域，偶然抓住了在附近飞的皮琼，撞到了墙上，之后不知为何就随便跟着了。</p>
     <p>看来这个时候，由于遵从比自己强的人的魔物的本能，承认了梅赛德斯为主。</p>
@@ -112,7 +112,7 @@
     <p>◆</p>
     <p></p>
     <p>与莱斯利分开，多米尼昂和顺便把皮乔恩也寄存起来的梅赛德斯，之后没有特别的骚动，回到了国家。</p>
-    <p>说句题外话，对于多米尼昂的离开，本凯格外高兴。</p>
+    <p>说句题外话，对于多米尼昂的离开，牟庆格外高兴。</p>
     <p>但是回到国家，并不是因此又能回到平静的学园生活。</p>
     <p>国家已经完全是战争气氛，到处都是市民杀气腾腾的样子。</p>
     <p>当然啦。突然杀死了好几个贵族。</p>
