--- a/OEBPS/Text/c138.xhtml
+++ b/OEBPS/Text/c138.xhtml
@@ -35,7 +35,7 @@
     <p>“<span class="character">去吧，我的棋子。</span>”</p>
     <p></p>
     <p>梅赛德斯和伯恩哈特同时释放了大量魔物。</p>
-    <p>梅赛德斯一侧除了有本凯、克洛、皮可、舒夫四只妖怪外，还有施塔克地下城、帝国地下城、格伦茨杰地下城等的魔物。</p>
+    <p>梅赛德斯一侧除了有牟庆、克洛、皮可、舒夫四只妖怪外，还有施塔克地下城、帝国地下城、格伦茨杰地下城等的魔物。</p>
     <p>伯恩哈特的背后也排着各种各样的魔物，一直在期待着激战的时刻。</p>
     <p>而且，其总数并不亚于拥有三个地下城的梅赛德斯。</p>
     <p>不，不仅如此，数量可能会稍高一些。</p>
@@ -116,8 +116,8 @@
     <p>“<span class="character">咕……终于……被拿到了主人手下的领导位置……！</span>”</p>
     <p>“<span class="character">不是在意那种事的时候吧……</span>”</p>
     <p></p>
-    <p>对向魔物们发出号令的贝尔特里克斯，资格最老的本凯懊悔地颤抖着拳头，被吓了一跳。</p>
-    <p>到现在为止，本凯一直在梅赛德斯的手下担任领导，但是遗憾的是他没有指挥能力。</p>
+    <p>对向魔物们发出号令的贝尔特里克斯，资格最老的牟庆懊悔地颤抖着拳头，被吓了一跳。</p>
+    <p>到现在为止，牟庆一直在梅赛德斯的手下担任领导，但是遗憾的是他没有指挥能力。</p>
     <p>因此，在这样的集体战中，被擅长指挥能力的贝尔特里克斯占据了将的位置也是没有办法的事。</p>
     <p>两军发生冲突，梅赛德斯和伯恩哈特无视周围所有的杂鱼展开激战。</p>
     <p>枪与斧枪在死亡之际纵横驰骋，成为两人周围谁都无法接近的刃之结界，将只不过是接近的魔物与敌我无关地切碎。</p>
@@ -128,7 +128,7 @@
     <p></p>
     <p>“<span class="character">哦哦哦哦哦哦哦哦！</span>”</p>
     <p></p>
-    <p>被夺走了队长宝座的本凯化身为一对当千的鬼，一个接一个地杀死了魔物，克洛迅速地在战场上奔跑，咬断了敌人的喉咙。</p>
+    <p>被夺走了队长宝座的牟庆化身为一对当千的鬼，一个接一个地杀死了魔物，克洛迅速地在战场上奔跑，咬断了敌人的喉咙。</p>
     <p>舒夫在敌人中也是格外强大的魔物……恐怕他会和门卫门前的番人级敌人交战，皮科率领着格伦茨杰地下城的飞行型魔物在天空中飞舞，向敌军发动奇袭。</p>
     <p>在两军的激战中，贝尔尼托克斯和前代兽王的视线交叉，贝尔尼托克斯露出了从容的笑容……上一代兽王浮现出憎恨的样子。</p>
     <p></p>
