--- a/OEBPS/Text/c139.xhtml
+++ b/OEBPS/Text/c139.xhtml
@@ -162,19 +162,19 @@
     <p>多么悲伤的男人啊。但是，在这种情况下，令人感激的也是事实。</p>
     <p>梅赛德斯向从悬崖上下来的戈特弗里特传达了重要的使命。</p>
     <p></p>
-    <p>“<span class="character">哥哥……对不起，上面的琪琪……请告诉穿着铠甲的六只手臂的家伙，停止战斗。琪琪和哥哥见过一次面，所以应该记得。这样的话，通过琪琪，传达给贝尔特里克斯。</span>”</p>
+    <p>“<span class="character">哥哥……对不起，上面的牟庆……请告诉穿着铠甲的六只手臂的家伙，停止战斗。牟庆和哥哥见过一次面，所以应该记得。这样的话，通过牟庆，传达给贝尔特里克斯。</span>”</p>
     <p></p>
     <p>对于梅赛德斯的请求，哥特弗里特进行了可靠的武士升级。</p>
-    <p>然后以惊人的速度攀登悬崖，发现了本凯。</p>
+    <p>然后以惊人的速度攀登悬崖，发现了牟庆。</p>
     <p>然后走近……。</p>
     <p></p>
     <p>“<span class="character">什么你！是敌人吗！</span>”</p>
     <p>“<span class="character">努哇！</span>”</p>
     <p></p>
-    <p>……竟然被本凯揍飞了，转过眼睛昏倒了。</p>
-    <p>喂，本凯……喂……。</p>
-    <p>看来，因为没有什么存在感，本凯好像也不记得他了。</p>
-    <p>旁边的九郎一脸“嗯？”的表情看着戈特弗里德，不过那是后来的祭典。</p>
+    <p>……竟然被牟庆揍飞了，转过眼睛昏倒了。</p>
+    <p>喂，牟庆……喂……。</p>
+    <p>看来，因为没有什么存在感，牟庆好像也不记得他了。</p>
+    <p>旁边的克洛一脸“嗯？”的表情看着戈特弗里德，不过那是后来的祭典。</p>
     <p>梅赛德斯也察觉到从上面听到的声音和悲鸣到底发生了什么。</p>
     <p></p>
     <p>“<span class="character">喂，梅赛德斯……这样下去棋子会白白减少。有什么办法吗？</span>”</p>
@@ -187,7 +187,7 @@
     <p>马克斯一边嚎啕大哭一边在悬崖前垂头丧气。</p>
     <p>不行。无可奈何。</p>
     <p>或者说应该让戈特弗里特带着马克斯去。</p>
-    <p>果然马克斯的话本凯也知道了吧。</p>
+    <p>果然马克斯的话牟庆也知道了吧。</p>
     <p>不，说起来如哥戈特弗里特把梅赛德斯运过来就好了。</p>
     <p>即使再怎么受伤思考不好，这完全是指挥失误。</p>
     <p>这是在重振之前，士兵只能继续白白减少的时候。</p>
