--- a/OEBPS/Text/c140.xhtml
+++ b/OEBPS/Text/c140.xhtml
@@ -213,7 +213,7 @@
     <p class="divline"></p>
     <p>パパンテンション↑↑↑ <span class="comment translator">看着像是在说情绪上涨的意思？</span></p>
     <p></p>
-    <p>本凯“<span class="character">本以为是无表情无精力系的主人，自本性解放以来，一直是危险事件</span>”</p>
+    <p>牟庆“<span class="character">本以为是无表情无精力系的主人，自本性解放以来，一直是危险事件</span>”</p>
     <p>舒夫“<span class="character">是非常喜欢困难道路的女生吗……</span>”</p>
     <p>茨瓦尔夫『<span class="character"> ( ゜д゜) </span>』</p>
     <p></p>
