--- a/OEBPS/Text/c141.xhtml
+++ b/OEBPS/Text/c141.xhtml
@@ -58,7 +58,7 @@
     <p>父亲和贝阿特丽克丝都可以确信，如果有必要的话，会有从后面砍过来的程度的腹黑。</p>
     <p>所以如果被看穿的话，这两个人会毫不犹豫地从背后刺杀梅赛德斯吧。</p>
     <p>如果没有那种程度的恶劣程度，能扩大权力到这里吗。</p>
-    <p>从这一点来说，系统和本能几乎不会背叛的本凯和克洛完全不同。</p>
+    <p>从这一点来说，系统和本能几乎不会背叛的牟庆和克洛完全不同。</p>
     <p></p>
     <p>但是梅赛德斯决定在这之前硬要吞下那个风险。</p>
     <p>未来试图战斗的人是自称是神的人，尽管自称是神。</p>
