--- a/OEBPS/Text/c009.xhtml
+++ b/OEBPS/Text/c009.xhtml
@@ -13,7 +13,7 @@
 <body>
     <h1>9. 交易</h1>
     <p>在救出トライヌ的第二天，梅赛德斯被送往トライヌ商会总部的接待室。</p>
-    <p>本凯站在她身后，毫不疏忽地警戒着周围的人。</p>
+    <p>牟庆站在她身后，毫不疏忽地警戒着周围的人。</p>
     <p>面前的座位上坐着トライヌ，脸色比昨天好多了。</p>
     <p>被邀请到这里的理由是想再次感谢昨天救过来的事，但主题恐怕不是那里吧。</p>
     <p></p>
@@ -85,9 +85,9 @@
     <p>此后两人，讨论到太阳升起一天结束。</p>
     <p class="divline"></p>
     <p>夜深了，梅赛德斯再次来到了seeker行会。</p>
-    <p>虽然没有武器等新配件，但是这次因为有带行李的本凯，所以买了稍微大一点的背包。</p>
-    <p>里面放着绳子、替代的蜡烛、备用衣物、方位磁铁、饮用水、羊皮纸、巧克力、鹤嘴锄等。当然带着它们是是本凯的工作。</p>
-    <p>虽然好奇的目光转向了跟随本凯在街上行走的梅赛德斯，但是却没有人靠近。</p>
+    <p>虽然没有武器等新配件，但是这次因为有带行李的牟庆，所以买了稍微大一点的背包。</p>
+    <p>里面放着绳子、替代的蜡烛、备用衣物、方位磁铁、饮用水、羊皮纸、巧克力、鹤嘴锄等。当然带着它们是是牟庆的工作。</p>
+    <p>虽然好奇的目光转向了跟随牟庆在街上行走的梅赛德斯，但是却没有人靠近。</p>
     <p>进入行会，像往常一样向柜台走去，接待员用平时令人毛骨悚然的笑容迎接着。</p>
     <p></p>
     <p>“<span class="character">哎呀，欢迎光临。我等着你”</span></p>
@@ -130,7 +130,7 @@
     <p>她只能制造出那种水准的东西。</p>
     <p></p>
     <p>照相机早早地死心，梅赛德斯此次也潜藏着到迷宫。</p>
-    <p>和以往不同，这次是本凯拿着灯笼和背包，所以除了武器以外什么都不用拿也挺开心的。</p>
+    <p>和以往不同，这次是牟庆拿着灯笼和背包，所以除了武器以外什么都不用拿也挺开心的。</p>
     <p>今后将挑战各种各样的迷宫，但梅赛德思索着首先要用这个斯塔克迷宫。</p>
     <p>魔物也想再捕获一体或二体左右作为伙伴，在这里赚取强有力的武器也预先得到。</p>
     <p>梅赛德斯目前的目的是从父亲那里独立出来，养育母亲和婆婆。</p>
@@ -138,7 +138,7 @@
     <p>seeker是赌上性命的工作，但就算如此，也不想每次都赌博。</p>
     <p>好好地形成立足点，如果能稳定地没有风险地赚那个最好。</p>
     <p></p>
-    <p>“<span class="character">本凯。你觉得在这个迷宫里的魔物中如果成为伙伴的话哪个比较好？”</span></p>
+    <p>“<span class="character">牟庆。你觉得在这个迷宫里的魔物中如果成为伙伴的话哪个比较好？”</span></p>
     <p>“<span class="character">嗯，是啊。那样的话，十二层以后出现的シュヴァルツ・ヴォルファング等怎么样？”</span></p>
     <p>“<span class="character">怎样的魔物？”</span></p>
     <p>“<span class="character">全高1m半的狼型魔物，是这个迷宫中出现的ヴォルファング中身体最大、力量最强的魔物。</span></p>
