--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -117,15 +117,15 @@
     <p>但是由于这个奖励，玛吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
     <p></p>
     <p>结束了玛吉特的学习，梅赛德斯回家后，家门前停着一辆带有陌生徽章的马车。</p>
-    <p>为了堵住那辆马车的去路，本凯和克洛挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
+    <p>为了堵住那辆马车的去路，牟庆和克洛挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
     <p>周围几个人倒下，能看见争斗的痕迹。</p>
     <p>到底发生了什么……。</p>
-    <p>暂且试着听话，梅赛德斯朝着本凯他们前进了。</p>
-    <p>“<span class="character">本凯，这是怎么回事？</span>”</p>
+    <p>暂且试着听话，梅赛德斯朝着牟庆他们前进了。</p>
+    <p>“<span class="character">牟庆，这是怎么回事？</span>”</p>
     <p>“<span class="character">是。这些人突然来访，而且还采取了威压的态度，判断为敌人后将其击溃</span>”</p>
     <p>“<span class="character">那么说说详情吧</span>”</p>
     <p></p>
-    <p>本凯所说的事情的始末如下。</p>
+    <p>牟庆所说的事情的始末如下。</p>
     <p>梅赛德斯不在家的时候，这辆马车突然来到屋子前，单方面要求梅赛德斯和他的母亲过去。</p>
     <p>当然，不知道是什么原因来的，不可能通过。</p>
     <p>因此问了告诉理由理所当然的事,不过，因为随从的士兵一边叫无礼一边拔出了剑判断为敌人交战。</p>
