--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -31,7 +31,7 @@
     <p>……啊，那个已经有了吗？</p>
     <p>然后把没有做好意思的马克斯肉偶人作为替身，成功地让马克斯生存下来。</p>
     <p>顺便说一下，因为迷宫的事情不能向吉克林德说出来，关于替身，他解释说“有两个像样的山贼很幸运地找到了，所以就用了他”。</p>
-    <p>幸存下来的马克斯暂且放在梅赛德斯的迷宫内，让最近没有出场的本凯和舒夫进行教育。</p>
+    <p>幸存下来的马克斯暂且放在梅赛德斯的迷宫内，让最近没有出场的牟庆和舒夫进行教育。</p>
     <p>暂且，根据罗勒被告诉吧如果弄好歪曲了的思想不知不觉外出的事说不定也能。</p>
     <p>“<span class="character">……因此，从今往后我要在这里生活</span>”</p>
     <p>梅赛德斯决定在自己所拥有的斯塔克迷宫内新建住宅，在那里让马克斯和尤利娅居住。</p>
@@ -45,13 +45,13 @@
     <p>当然，梅赛德斯也不仅仅是出于善意收留了尤利娅。</p>
     <p>头脑的遗憾姑且不论，尤利娅的体术和魔法有利用价值。</p>
     <p>正是因为那样想，才把尤利娅收回来的。</p>
-    <p>总之，把本凯当成教师，把空头稍微好一点就能用了吧。</p>
+    <p>总之，把牟庆当成教师，把空头稍微好一点就能用了吧。</p>
     <p>这个和这个无关紧要，但是贝阿朵莉克斯是以前她为主的迷宫……因为很麻烦，所以叫他帝国迷宫吧。我在那边盖房子。</p>
     <p>“<span class="character">哦，你是迷宫的继承人吗……</span>”</p>
     <p>马克斯对梅赛德斯拥有迷宫感到惊讶。</p>
     <p>但是因为没有义务做详细的说明，所以对于他的疑问没有任何答复就忽略了。</p>
     <p>无论是教还是不教，首先要让学生学习常识。</p>
-    <p>“<span class="character">如果有需要的话，通过本凯告诉我。</span></p>
+    <p>“<span class="character">如果有需要的话，通过牟庆告诉我。</span></p>
     <p><span class="character">虽然不能说一定要准备，但多少能起到一点通融的作用</span>”</p>
     <p>只说了这些，梅赛德斯离开了迷宫。</p>
     <p>因为觉得自己再说什么都会警惕，对方也需要沉着的时间。</p>
