--- a/OEBPS/Text/c119.xhtml
+++ b/OEBPS/Text/c119.xhtml
@@ -15,7 +15,7 @@
     <p>捕获了多米尼安的梅赛德斯决定再去地下城一次。</p>
     <p>外面天空就像是日落时一样，开始变暗。</p>
     <p>在试炼前，梅赛德斯确保了多米尼翁这一优秀的战力，但梅赛德斯并不乐观，认为他会直接在正式行动中出场。</p>
-    <p>对打倒自己的对手无条件服从的本凯，虽说是魔物，但因为是狼，所以和原本就容易习惯人的克洛情况不同。</p>
+    <p>对打倒自己的对手无条件服从的牟庆，虽说是魔物，但因为是狼，所以和原本就容易习惯人的克洛情况不同。</p>
     <p>首先必须要让自己放弃，必须要让自己放弃。</p>
     <p>原本梅赛德斯只组织自己和魔物的组合，因为如果是同样的吸血鬼的话有背叛的可能性……也就是说，不能相信。</p>
     <p>因此，如果哪怕只有一点点背叛的可能性的话，那就不算是队伍成员了。</p>
@@ -46,7 +46,7 @@
     <p>不过，这里是梅赛德斯所有的迷宫中。万一闹大了，多米尼安也没办法打吧。</p>
     <p>“<span class="character">没想到是迷宫的所有者……</span>”</p>
     <p>当梅赛德斯进入视野时，多米尼安发出了赞叹的声音。</p>
-    <p>然后怎样都无所谓，仔细一想，我觉得在全身铠甲的巨汉这一点上，我和本凯发生了角色扮演。</p>
+    <p>然后怎样都无所谓，仔细一想，我觉得在全身铠甲的巨汉这一点上，我和牟庆发生了角色扮演。</p>
     <p>我觉得只有银和银的区别。</p>
     <p>梅赛德斯站在多米尼安面前，和他对视</p>
     <p>多米尼翁有3米之多，即使坐着也必须要看一下梅赛德斯。</p>
