--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -59,14 +59,14 @@
     <p>这两个魔物可以说是梅赛德斯的主力，但这次的迷宫攻略——也就是说在和守护者的战斗中没有出场机会。</p>
     <p>从至今为止的构造来看，可以认为首先是十有八九的空战。</p>
     <p>如果有立足点的话，敏捷的克洛还能从立足点飞到立足点上，这一点也不是不能战斗，但是如果立足点没有的可能性的话，梅赛德斯认为这次还是一开始就可以飞的成员来挑战比较好。</p>
-    <p>至于本凯，很遗憾没有讨论的必要……身为重战士的他在这次战场上什么也做不了。竭尽全力射箭的程度是吗。</p>
+    <p>至于牟庆，很遗憾没有讨论的必要……身为重战士的他在这次战场上什么也做不了。竭尽全力射箭的程度是吗。</p>
     <p>即使是放在皮可上运用，开销也太重了。</p>
     <p>如果能再加上新的防御，那就太好了。</p>
     <p>然后决定把莱斯利也晾在一边。果然，守护她的风险太大了。</p>
     <p>“<span class="character">那我走了。这里交给你了</span>”</p>
     <p>“<span class="character">啊。交给我吧</span>”</p>
     <p>“<span class="character">哇！</span>”</p>
-    <p>和本凯和克洛打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
+    <p>和牟庆和克洛打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
     <p>到达迷宫后立刻移动到门前的转播地点，然后派出这次的对守护者成员。</p>
     <p>首先，梅赛德斯自己就不用说了，多米尼翁和皮科，还有尤利娅这次使用的脸蛋。</p>
     <p>虽然加入了新加入的多米尼翁和尤利娅是不安的材料，但是考虑到与战场的相性，得出了这两个人最好的结论。</p>
